@@ -31,54 +31,90 @@ import io.crate.types.DataType;
 import io.crate.types.DataTypes;
 import org.elasticsearch.common.breaker.CircuitBreakingException;
 
+import javax.annotation.Nullable;
 import java.util.Collections;
+import java.util.function.BinaryOperator;
 
-public class SumAggregation extends AggregationFunction<Double, Double> {
+public class SumAggregation<T extends Number> extends AggregationFunction<T, T> {
 
     public static final String NAME = "sum";
 
-    private final FunctionInfo info;
-
     public static void register(AggregationImplModule mod) {
-        for (DataType t : DataTypes.NUMERIC_PRIMITIVE_TYPES) {
-            mod.register(new SumAggregation(t));
-        }
+
+        final BinaryOperator<Long> longAddImpl = (n1, n2) -> {
+            Long r = n1 + n2;
+            // Overflow if both arguments have the opposite sign of the result
+            if (((n1 ^ r) & (n2 ^ r)) < 0) {
+                throw new ArithmeticException("long overflow");
+            }
+            return r;
+        };
+
+        mod.register(new SumAggregation<Float>(DataTypes.FLOAT, (n1, n2) -> n1 + n2));
+        mod.register(new SumAggregation<Double>(DataTypes.DOUBLE, (n1, n2) -> n1 + n2));
+        mod.register(new SumAggregation<>(DataTypes.BYTE, DataTypes.LONG, longAddImpl));
+        mod.register(new SumAggregation<>(DataTypes.SHORT, DataTypes.LONG, longAddImpl));
+        mod.register(new SumAggregation<>(DataTypes.INTEGER, DataTypes.LONG, longAddImpl));
+        mod.register(new SumAggregation<>(DataTypes.LONG, longAddImpl));
     }
 
+    private final FunctionInfo info;
+    private final BinaryOperator<T> addition;
+    private final DataType<T> returnType;
+    private final int bytesSize;
+
     @VisibleForTesting
-    public SumAggregation(DataType inputType) {
+    private SumAggregation(final DataType returnType, final BinaryOperator<T> addition) {
+        this(returnType, returnType, addition);
+    }
+
+    private SumAggregation(final DataType inputType, final DataType returnType, final BinaryOperator<T> addition) {
+        this.addition = addition;
+        this.returnType = returnType;
+
+        if (returnType == DataTypes.FLOAT) {
+            bytesSize = DataTypes.FLOAT.fixedSize();
+        }
+        else if (returnType == DataTypes.DOUBLE) {
+            bytesSize = DataTypes.DOUBLE.fixedSize();
+        }
+        else {
+            bytesSize = DataTypes.LONG.fixedSize();
+        }
+
         this.info = new FunctionInfo(
             new FunctionIdent(NAME, Collections.singletonList(inputType)),
-            DataTypes.DOUBLE,
+            returnType,
             FunctionInfo.Type.AGGREGATE
         );
     }
 
+    @Nullable
     @Override
-    public Double iterate(RamAccountingContext ramAccountingContext, Double state, Input... args) throws CircuitBreakingException {
-        return reduce(ramAccountingContext, state, DataTypes.DOUBLE.value(args[0].value()));
+    public T newState(RamAccountingContext ramAccountingContext) {
+        ramAccountingContext.addBytes(bytesSize);
+        return null;
     }
 
     @Override
-    public Double reduce(RamAccountingContext ramAccountingContext, Double state1, Double state2) {
+    public T iterate(RamAccountingContext ramAccountingContext, T state, Input[] args) throws CircuitBreakingException {
+        return reduce(ramAccountingContext, state, returnType.value(args[0].value()));
+    }
+
+    @Override
+    public T reduce(RamAccountingContext ramAccountingContext, T state1, T state2) {
         if (state1 == null) {
             return state2;
         }
         if (state2 == null) {
             return state1;
         }
-        return state1 + state2;
+        return addition.apply(state1, state2);
     }
 
     @Override
-    public Double terminatePartial(RamAccountingContext ramAccountingContext, Double state) {
+    public T terminatePartial(RamAccountingContext ramAccountingContext, T state) {
         return state;
-    }
-
-    @Override
-    public Double newState(RamAccountingContext ramAccountingContext) {
-        ramAccountingContext.addBytes(DataTypes.DOUBLE.fixedSize());
-        return null;
     }
 
     @Override
